<resources>
    <string name="app_name" translatable="false">MRVPatch Manager</string>
    <string name="title_home">Home</string>
    <string name="title_patched">Patched</string>
    <string name="title_settings">Settings</string>
    <string name="menu_about_title">About</string>
    <string name="menu_instruction_title">Instruction</string>
    <string name="menu_tutorial_title">Video Tutorial</string>
    <string name="menu_update_check_title">Check Update</string>
    <string name="save_menu_title">Save</string>
    <string name="delete_menu_title">Delete</string>
    <string name="share_menu_title">Share</string>
    <string name="details_menu_title">Details</string>
    <string name="manual_apk_menu_title">APK Files</string>
    <string name="manual_app_menu_title">Installed Apps</string>
    <string name="select_all_menu_title">Select All</string>
    <string name="patcher_title">Patcher</string>
    <string name="patch_button_title">Patch</string>
    <string name="module_title">ChatHeadEnabler</string>
    <string name="module_warning">Please Install ChatHeadEnabler First</string>
    <string name="manager_title">Manager</string>
    <string name="version_text">Version: %s</string>
    <string name="latest_version">Latest: %s</string>
    <string name="installed_version">Installed: %s</string>
    <string name="changelog_text">What\'s new in this version?</string>
    <string name="update_text">Update</string>
    <string name="install_text">Install</string>
    <string name="info_text">Info</string>
    <string name="patcher_default">Default</string>
    <string name="patcher_manual">Manual</string>
    <string name="no_patched_apps">No patched apps</string>
    <string name="patched_apk_placeholder">Patched apk file info</string>
    <string name="manual_installed_app_title">Patch an installed app:</string>
    <string name="checking_for_update">Checking for update…</string>

    <string name="text_confirmation">Confirmation</string>
    <string name="text_warning">Warning!</string>
    <string name="text_reset">Reset</string>
    <string name="text_save">Save</string>
    <string name="text_saved">Saved</string>
    <string name="text_enable">Enable</string>
    <string name="text_clear">Clear</string>
    <string name="text_cleared">Cleared</string>
    <string name="text_required">Required</string>
    <string name="text_versions">versions</string>
    <string name="developer_info_text">Developer: &#160;%s</string>
    <string name="help_forum_info_text">Help Forum: &#160;%s</string>
    <string name="source_code_info_text">Source Code: &#160;%s</string>

    <string name="custom_keystore_input_title">Keystore Input (bks)</string>
    <string name="custom_keystore_input_file">Keystore file</string>
    <string name="custom_keystore_input_password">Keystore password</string>
    <string name="custom_keystore_input_key_alias">Key alias (optional)</string>
    <string name="custom_keystore_input_alias_password">Alias password (optional)</string>
    <string name="patch_version_input_placeholder">Apk version name</string>
    <string name="patch_version_dialog_message">Please input an apk version for patching.
        Partial version names are allowed, such as:\n\"420\", \"420.15.2\", or full \"420.15.2.11\"
    </string>

    <string name="pref_config_group_title">Configs</string>
    <string name="pref_apk_server_title">Apk download server</string>
    <string name="pref_apk_server_summery">Pick a server for APK downloads.</string>
    <string name="pref_fix_conflict_title">Resolve apk conflicts</string>
    <string name="pref_fix_conflict_summery">Enable if you can\'t remove the preinstalled Meta apps.</string>
    <string name="pref_mask_package_title">Mask package name</string>
    <string name="pref_mask_package_summery">Enable if you can\'t remove the original Messenger app.</string>
    <string name="pref_fallback_mode_title">Fallback patch mode</string>
    <string name="pref_fallback_mode_summery">Use an alternative fallback patching method.</string>
    <string name="pref_advanced_settings_title">Advanced configurations</string>
    <string name="pref_advanced_settings_summery">Intended for advanced users only.</string>

    <string name="pref_advanced_group_title">Advanced</string>
    <string name="pref_apk_abi_type_title">Apk download type</string>
    <string name="pref_apk_abi_type_summery">Select ABI type for apks</string>
    <string name="pref_apk_abi_type_detected">"Auto detected: %s"</string>
    <string name="pref_custom_keystore_title">Custom keystore file</string>
    <string name="pref_custom_keystore_summery">Set a custom keystore for apk signing.</string>
    <string name="pref_extra_modules_hint">Package Names</string>
    <string name="pref_extra_modules_title">Allow third-party modules</string>
    <string name="pref_extra_modules_summery">Allow third-party modules to be loaded.</string>
    <string name="pref_extra_modules_message">Package names separated by commas:</string>
    <string name="pref_extra_modules_package">Packages: %s</string>
    <string name="pref_extra_modules_messenger_pro_name">Messenger Pro</string>
    <string name="pref_custom_keystore_keystore">Keystore: %s</string>

    <string name="pref_action_group_title">Actions</string>
    <string name="pref_clear_cache_title">Clear download cache</string>
    <string name="pref_clear_cache_summery">Remove temporary files from the cache.</string>

    <string name="pref_other_group_title">Others</string>
    <string name="pref_instruction_title">Instructions</string>
    <string name="pref_instruction_summery">Read the usage instructions.</string>
    <string name="pref_troubleshoot_title">Troubleshoot</string>
    <string name="pref_troubleshoot_summery">Common issues and solutions.</string>
    <string name="pref_safety_note_title">Safety Note</string>
    <string name="pref_safety_note_summery">Having security concerns?</string>
    <string name="pref_visit_help_title">Help Forum</string>
    <string name="pref_visit_help_summery">Visit the XDA help forum.</string>
    <string name="pref_visit_source_title">Source Code</string>
    <string name="pref_visit_source_summery">Visit the project\'s GitHub repository.</string>
    <string name="pref_extra_modules_invalid_pkg">Invalid package name: %s</string>
    <string name="pref_clear_cache_confirm_prompt">Clear cache</string>
    <string name="pref_clear_cache_confirm_message">"This will not delete your patched apps."</string>

    <string name="pref_fix_conflict_confirm_message">Enabling this option
        lets you install patched Messenger alongside original Meta apps.
        \nHowever, if you have the option to uninstall both Facebook and Messenger,
        but are facing issues due to other pre-installed apps from Meta,
        it is highly recommended to uninstall both original apps and install the patched versions instead.
        This fixes cross-app features like opening links from Messenger to Facebook and login sharing.
    </string>
    <string name="pref_mask_package_confirm_message">This option is NOT recommended for regular users.
        It is meant for those who cannot remove the original Messenger app.
        \nNote that enabling this option may affect some functionality in Messenger and cause minor issues.
        Please try to remove the original Messenger app before using this option.
        \n[See \"Resolve apk conflicts\" option]
    </string>
    <string name="pref_fallback_mode_confirm_message">Enable fallback mode?
        \n[Apps patched in fallback mode may launch slightly slower]
    </string>
    <string name="instructions">
        Instructions:
        \n\nUninstall all official facebook apps: facebook, messenger, facebook lite, etc.
        \n\nInstall the ChatHeadEnabler module.
        \n\nPatch and install a Messenger apk from here.
        \n\nPlease watch the video tutorial (from the app menu) for complete instructions.
        \n\n[Find the help forum under Settings.]
    </string>
    <string name="troubleshoot">
        Troubleshoot:
        \n\nDownload failed?
        \nSelect a different server or try again later.
        \nAlternatively, you can download a Messenger apk from apkmirror.com and patch it using the manual option.
        \n\nInstall failed?
        \nMake sure you have uninstalled all official Meta apps.
        If some Meta apps cannot be uninstalled, enable the \"Resolve apk conflicts\" option and try patching again.
        \n\nNot working?
        \nMake sure you have installed the ChatHeadEnabler module. Also, try restarting the Messenger app.
        \n\n[Find the help forum under Settings.]
    </string>
    <string name="safety_note">
        Safety Note:
        \n\nIs it safe to use?
        \nYes. It is just as safe as any app installed from the Play Store.
        \n(Make sure you downloaded MRVPatchManager from the official GitHub link.)
        \n\nHow can I be sure?
        \nAll the apps, tools and dependencies used here are open source.
        You can view their full source code on GitHub.
        \n\nWhat safety measures are taken?
        \nMRVPatchManager downloads your selected app from various APK servers
        and verifies it against the original Meta signature,
        ensuring you are patching a genuine, official Meta app.
        \nBecause of this local signature verification, APK servers cannot distribute tampered or unsafe files.
        If a file has been modified, the signature check fails and the manager will refuse to patch it.
        This mirrors the exact security check the Play Store uses to verify an app\'s authenticity."
    </string>
</resources>
