<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/delete"
        android:title="@string/delete_menu_title"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/save"
        android:title="@string/save_menu_title"
        android:icon="@android:drawable/ic_menu_save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/share"
        android:title="@string/share_menu_title"
        android:icon="@android:drawable/ic_menu_share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/details"
        android:title="@string/details_menu_title"
        android:icon="@android:drawable/ic_menu_info_details"
        app:showAsAction="never" />

    <item
        android:id="@+id/selectAll"
        android:title="@string/select_all_menu_title"
        android:icon="?attr/actionModeSelectAllDrawable"
        app:showAsAction="never" />
</menu>
